# DDD-CQRS-BDD-Python

./: .env  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  MAKEFILE  Makefile  README.md  docker-compose.yml  pyproject.toml
log/: logs.txt
src/apps/inventary/api/: InventaryAPI.py  InventaryFastAPI.py  __init__.py  start.py
src/apps/inventary/api/controllers/: ProductCommandController.py  ProductPostController.py  ProductQueryController.py  __init__.py
src/apps/inventary/api/dependecy_injection/: __init__.py  application.py
src/apps/inventary/api/routes/: __init__.py  routes.py
src/apps/inventary/api/validators/: ProductPostValidator.py  ProductPutValidator.py  __init__.py
src/contexts/inventary/: __init__.py  config.py
src/contexts/inventary/products/application/: ProductCreator.py  ProductCreatorRequestDTO.py  __init__.py
src/contexts/inventary/products/domain/: Product.py  ProductDescription.py  ProductDiscount.py  ProductFinalPrice.py  ProductInvalidStatusValue.py  ProductName.py  ProductPrice.py  ProductReadRepository.py  ProductRepository.py  ProductStatus.py  ProductStock.py  ProductWriteRepository.py  __init__.py
src/contexts/shared/domain/: DomainException.py  Logger.py  __init__.py  constants.py
src/contexts/shared/infrastucture/: CacheService.py  DBConnection.py  LoggingLogger.py  Singlenton.py  __init__.py
tests/: conftest.py
tests/apps/inventary/api/: conftest.py
tests/contexts/shared/: __init__.py
tests/contexts/shared/mocks/: LoggingLoggerMock.py
tests/shared/: utils.py
(+39 files in other folders)
