[tool.poetry]
name = "tektonlabstest"
version = "0.1.0"
description = "TekTonLabs Test"
authors = ["Cris <cjgalvisc@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
motor = "^3.1.1"
beanie = "^1.13.1"
dependency-injector = "^4.40.0"
python-dotenv = "^0.21.0"
httpx = "^0.23.1"
fastapi-cache = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest-bdd = "^6.0.1"
isort = "^5.10.1"
black = "^22.10.0"
coverage = "^6.5.0"
pytest = "^7.2.0"
requests = "^2.28.1"
faker = "^15.1.1"
pytest-asyncio = "^0.20.2"

[tool.isort]
skip_glob = ["**/__init__.py"]
use_parentheses = true
reverse_relative = true
include_trailing_comma = true
lines_between_types = 0
multi_line_output = 3
line_length = 79

[tool.black]
target-version = ["py310"]
include = '\.pyi?$'
line-length = 79

[tool.pytest.ini_options]
minversion = 2.0
norecursedirs = [".git", ".tox", "requirements*"]
python_files = ["test*.py"]
markers = [
    "unit: (deselect with '-m \"not unit\"')",
    "feature: (deselect with '-m \"not feature\"')"
]

[tool.coverage.run]
include=[
    "./src/*",
]
disable_warnings=["include-ignored"]

[tool.coverage.report]
show_missing=true
include=[
    "./src/*",
]
sort="-Miss"
precision=2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
